
PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3395: Large filter expression makes Pig hang (cheolsoo)

PIG-3123: Simplify Logical Plans By Removing Unneccessary Identity Projections (njw45 via cheolsoo)

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3412: jsonstorage breaks when tuple does not have as many columns as schema (aesilberstein via cheolsoo)

PIG-3243: Documentation error (sarutak via cheolsoo)

PIG-3210: Pig fails to start when it cannot write log to log files (mengsungwu via cheolsoo)

PIG-3392: Document STARTSWITH and ENDSWITH UDFs (sriramkrishnan via cheolsoo)

PIG-3393: STARTSWITH udf doesn't override outputSchema method (sriramkrishnan via cheolsoo)

PIG-3389: "Set job.name" does not work with dump command (cheolsoo)

PIG-3387: Miss spelling in test code "TestBuiltin.java" (sarutak via cheolsoo)

PIG-3384: Missing negation in UDF doc sample code (ddamours via cheolsoo)

PIG-3369: unit test TestImplicitSplitOnTuple.testImplicitSplitterOnTuple failed when using hadoopversion=23 (dreambird via cheolsoo)

PIG-3375: CASE does not preserve the order of when branches (cheolsoo)

PIG-3364: Case expression fails with an even number of when branches (cheolsoo)

PIG-3354: UDF example does not handle nulls (patc888 via daijy)

PIG-3355: ColumnMapKeyPrune bug with distinct operator (jeremykarn via aniket486)

PIG-3318: AVRO: 'default value' not honored when merging schemas on load with AvroStorage (viraj via rohini)

PIG-3250: Pig dryrun generates wrong output in .expanded file for 'SPLIT....OTHERWISE...' command (dreambird via cheolsoo)

PIG-3331: Default values not stored in avro file when using specific schemas during store in AvroStorage (viraj via rohini)

PIG-3322: AvroStorage give NPE on reading file with union as top level schema (viraj via rohini)

PIG-2828: Handle nulls in DataType.compare (aniket486)
