@@ -208,6 +208,9 @@ catch(RecognitionException re) {
 query : statement* EOF -> ^( QUERY statement* )
 ;
 
+schema: field_def_list EOF
+;
+
 // STATEMENTS
 
 statement : SEMI_COLON!
