@@ -131,40 +131,40 @@ public class TestSchemaTuple {
         udfSchema = Utils.getSchemaFromString(
                 "int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))");
@@ -260,40 +260,40 @@ public class TestSchemaTuple {
         udfSchema = Utils.getSchemaFromString(
                 "int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
-                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))"
+                +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger)),"
                 +"int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger,"
                 +"(int, long, chararray, boolean, bytearray, float, double, datetime, bigdecimal, biginteger))");
